# Totally-Random-OpenGL-Stuff

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
header/: window.hpp
src/: main.cpp  pch.hpp  window.cpp
